tests/lean/error_pos.lean.expected.out
error_pos.lean:1:39: error: type expected at
  B
error_pos.lean:4:43: error: type expected at
  B
error_pos.lean:4:43: error: type expected at
  B
error_pos.lean:11:37: error: type expected at
  B
error_pos.lean:13:37: error: type expected at
  B
